--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <h1>titulo en documento</h1>
+    <h2>segundo titulo</h2>
 </head>
 <body>
     
